@@ -14,6 +14,8 @@ NEW FEATURES
  * Issue #245: (POSIX) Process.wait() incrementally consumes less CPU cycles.
  * Issue #258: (Linux) Process.get_memory_info() is now 0.5x faster.
  * Issue #260: process's mapped memory regions. (Windows patch by wj32.64)
+ * Issue #262: (Windows) psutil.disk_partitions() was slow due to inspecting
+   the floppy disk drive also when "all" argument was False.
 
 BUGFIXES
 
